--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,17 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>LandingPage</title>
+  <title>Homepage - tienminhvy.com</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <meta name="title" content="Homepage - tienminhvy.com">
+  <meta name="description" content="The personal homepage of tienminhvy.com - Made by Vy Tien">
+  <meta name="keywords" content="tienminhvy, vytien, vytm, vy-tien, tmv, terminal, emulator">
+  <meta name="robots" content="index, follow">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <meta name="language" content="English">
+  <meta name="author" content="Tien Minh Vy">
 </head>
 <body>
   <app-root></app-root>
