feat: add preview image for social media sharing

--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta name="language" content="English">
   <meta name="author" content="Tien Minh Vy">
+  <meta property="og:image" content="terminal-emulator-v1.png">
 </head>
 <body>
   <app-root></app-root>
